css/login-page.css
.tache-couleur {
    position: absolute;
    right: -92px;
    top: -139px;
    display: block;
}

.logo-complet-login {
    display: none;
    width: 170px;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-top: 40px;
    z-index: 3;
    position: relative;
}

.login-container {
    width: 100%;
    margin-top: 60px;
    padding: 10px;
    z-index: 2;
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.login-container header {
    margin-top: 20px;
}

.login-container label {
    display: block;
    margin-bottom: 10px;
    font-weight: bold;
    font-size: 16px;
}

.login-container input {
    width: 100%;
    margin-bottom: 20px;
    font-size: 18px;
    padding: 12px 8px;
    background-color: white;
    border-radius: 10px;
    border: 1px solid var(--black-light);
    width: 100%;
}

.login-container button {
    background-color: var(--black-light);
}

.login-container button:hover {
    background-color: var(--red);
}

#uti_mdp {
    margin-bottom: 20px;
}

.mdp-infos {
    margin-bottom: 20px;
}

.mdp-infos p {
    font-weight: bold;
    margin-bottom: 10px;
}

.mdp-infos span {
    padding: 4px 8px;
    background-color: rgb(246, 246, 246);
    border-radius: 10px;
    margin-bottom: 10px;
    margin-right: 10px;
    display: inline-block;
    color: rgb(87, 87, 87);
}

.login-link {
    text-align: center;
}

.link-bold {
    font-weight: bold;
    color: var(--red);
    text-decoration: none;
}

